--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,14 +2,23 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow"
-        Height="350"
-        Width="525"
+        Height="40"
+        Width="198"
         Topmost="True"
         WindowStyle="None"
         AllowsTransparency="True"
         ResizeMode="CanResizeWithGrip"
         Loaded="LoadedHandler">
     <Grid Background="Black" Cursor="SizeAll">
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+        <Viewbox>
+            <TextBlock Foreground="LightSkyBlue" TextAlignment="Center" VerticalAlignment="Center">60</TextBlock>
+        </Viewbox>
+        <Viewbox Grid.Column="1">
+            <TextBlock Foreground="LightGoldenrodYellow" TextAlignment="Center" VerticalAlignment="Center">100</TextBlock>
+        </Viewbox>
     </Grid>
 </Window>
