--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,24 +1,25 @@
 ﻿<Window x:Class="Camurphy.CenturionCounter.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
+        Title="Centurion Counter"
         Height="40"
-        Width="198"
+        Width="150"
         Topmost="True"
         WindowStyle="None"
         AllowsTransparency="True"
         ResizeMode="CanResizeWithGrip"
-        Loaded="LoadedHandler">
+        MouseLeftButtonDown="MouseLeftButtonDownHandler"
+        KeyUp="KeyUpHandler">
     <Grid Background="Black" Cursor="SizeAll">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Viewbox>
-            <TextBlock Foreground="LightSkyBlue" TextAlignment="Center" VerticalAlignment="Center">60</TextBlock>
+            <TextBlock x:Name="SecondsRemainingTextBlock" Foreground="LightSkyBlue" TextAlignment="Center" VerticalAlignment="Center">10</TextBlock>
         </Viewbox>
         <Viewbox Grid.Column="1">
-            <TextBlock Foreground="LightGoldenrodYellow" TextAlignment="Center" VerticalAlignment="Center">100</TextBlock>
+            <TextBlock x:Name="ShotsCompleteTextBlock" Foreground="LightGoldenrodYellow" TextAlignment="Center" VerticalAlignment="Center">100</TextBlock>
         </Viewbox>
     </Grid>
 </Window>
